Fix for linux icon issue